--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 html {
   font-family: "Anta", sans-serif;
 }
+
 #primeiro {
     height:200px;
     width:200px;
     background-color:black;
+    display:inline-block;
 }
 #segundo {
     height:200px;
@@ -15,4 +17,5 @@ html {
     height:200px;
     width:200px;
     background-color:purple;
+    display:inline-block;
 }
